--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,7 +26,9 @@ services:
       context: ../
       dockerfile: ./docker/dockerfile
     ports:
-      - "6000:6000"
+      - "6000:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       - mongodb
       - postgres
