fix(script): fix script healthcheck

--- a/src/WalletService.Api/appsettings.json
+++ b/src/WalletService.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
     "ConnectionStrings": {
         "Mongo": "",
-        "Postgres": ""
+        "Postgres": "",
+        "Cache": ""
     },
     "Microservices": {
         "user": "https://jsonplaceholder.typicode.com/users"
